some changes added to semana1 and semana2

--- a/semana1/index.html
+++ b/semana1/index.html
@@ -32,5 +32,6 @@
     </footer>
     <script src="clase-01.js"></script>
     <script src="clase-02.js"></script>
+    <script src="clase-03.js"></script>
 </body>
 </html>
